# artifex-eco-press

./: .gitignore  README.md
config/: production.yaml
docs/architecture/: 01_overview_and_spec.md  02_agent_action_plan.md
docs/commissioning/: phase1_5_commissioning.md
firmware/portenta_h7/src/cycle/phases/: fsm.cpp  fsm.h
firmware/portenta_h7/src/thermal/: pid.cpp  pid.h
jetson/: pyproject.toml
jetson/artifex/: orchestrator.py
jetson/artifex/comms/schema/: cycle_packet_v1.py
jetson/artifex/vision/detectors/: defect_scanner.py
schemas/: cycle_packet.v1.json
scripts/: artifex_omniverse_physics.py
